--- a/game.libretro.xmil/resources/language/resource.language.en_gb/strings.po
+++ b/game.libretro.xmil/resources/language/resource.language.en_gb/strings.po
@@ -17,7 +17,7 @@ msgstr ""
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 msgctxt "Addon Summary"
-msgid "Sharp X1 (X Millennium) 0.60"
+msgid "Sharp X1 (X Millennium)"
 msgstr ""
 
 msgctxt "Addon Description"
