--- a/game.libretro.xmil/resources/language/resource.language.en_gb/strings.po
+++ b/game.libretro.xmil/resources/language/resource.language.en_gb/strings.po
@@ -24,9 +24,7 @@ msgctxt "Addon Description"
 msgid "X millennium was born in the late 1990s as X1R, a real-time mode fork of X1EMU."
 msgstr ""
 
-msgctxt "#30000"
-msgid "Settings"
-msgstr ""
+# Empty string with ID 30000
 
 msgctxt "#30001"
 msgid "Resolution"
